--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart" : "nodemon index.js"
+    "devStart": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,13 @@
     "nodemon": "^2.0.21"
   },
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^7.0.1"
+    "express-session": "^1.17.3",
+    "mongoose": "^7.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
